fix: style for text wrapping in form block legend (#1034)

--- a/src/theme/ItaliaTheme/Blocks/_form.scss
+++ b/src/theme/ItaliaTheme/Blocks/_form.scss
@@ -90,6 +90,10 @@
     }
   }
 
+  legend {
+    white-space: pre-wrap;
+  }
+
   .bootstrap-select-wrapper {
     > label {
       position: unset;
